Corrects letter spacing on homepage

--- a/src/scss/_components/_footer.scss
+++ b/src/scss/_components/_footer.scss
@@ -2,7 +2,7 @@
 	&__main-content {
 		// width: 960px;
 		// max-width: 100%;
-		margin: 0 auto $base-spacing * 2;
+		margin: $base-spacing * 8 auto;
 	}
 
 	.h-list {
